Fix collapse widget in Photos

--- a/src/components/photos_widget/style.css
+++ b/src/components/photos_widget/style.css
@@ -120,3 +120,7 @@
   opacity: 0;
   transition: opacity 3s;
 }
+
+.collapseWrap {
+  float: right;
+}
